[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# dotenvy = "0.15"
# async-stream = { version = "0.3" }
# async-trait = { version = "0.1" }
# futures = { version = "0.3" }
# futures-util = { version = "0.3" }
rocket = { version = "0.5", features = ["json"] }
sea-orm-rocket = { version = "0.5" }
# serde_json = { version = "1" }
tokio = "1.29.0"

model_entity = { path = "../entity" }
service = { path = "../service" }
db = { path = "../db" }